# gstreamer-multipipeline-viz

gstreamer-multipipeline/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
gstreamer-multipipeline/src/: App.svelte  app.css  multiGraphStyle.ts
gstreamer-multipipeline/src/lib/: TracerProvider.svelte  sockets.ts  tracer_ges_types.ts  tracer_types.ts
gstreamer-multipipeline/src/lib/tracer_mgr/: ParentNode.svelte  reconciler.ts  tracer_mgr.ts
multipipeline-viz/: .gitignore
websocket_server/: Cargo.toml
websocket_server/src/: README.md  main.rs
websocket_server/src/socket_mgr/: mod.rs  server.rs
