[package]
name = "gstreamer-multipipeline-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.20.1"
tokio = {version="1.32.0", features=["full"]}
futures = "0.3"
serde_json = "1.0.107"
rand = "0.8.4"
